2023-09-24T16:14:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6291102406 # 1927
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 43 160
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 2865 / 1226 3028
* notice: next accum: outdated-unq outdated-all / unq all: 1158 2865 / 1226 3029
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -3 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [] / [2023-09-10 2023-09-24]

2023-09-24T08:14:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6288931526 # 1926
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 45 162
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 2865 / 1222 3024
* notice: next accum: outdated-unq outdated-all / unq all: 1158 2865 / 1226 3028
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -1 -1 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [] / [2023-09-10 2023-09-24]

2023-09-24T00:59:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6287047064 # 1925
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 45 159
* notice: prev accum: outdated-unq outdated-all / unq all: 1156 2862 / 1221 3021
* notice: next accum: outdated-unq outdated-all / unq all: 1158 2865 / 1222 3024
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +4 +10 -0 -0 / 4 10
* notice: removed / changed dates: [2023-09-09] / [2023-09-23]

2023-09-23T16:14:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6284736129 # 1924