@@ -1,12 +1,7 @@
 {
-  "count": 160,
-  "uniques": 43,
+  "count": 157,
+  "uniques": 42,
   "clones": [
-    {
-      "timestamp": "2023-09-10T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-09-11T00:00:00Z",
       "count": 2,
