@@ -1,3 +1,12 @@
+2023-09-25T00:57:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6293536915 # 1928
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-25
+* notice: last 14d: unq all: 42 157
+* notice: prev accum: outdated-unq outdated-all / unq all: 1158 2865 / 1226 3029
+* notice: next accum: outdated-unq outdated-all / unq all: 1163 2872 / 1226 3029
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-10] / []
+
 2023-09-24T16:14:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6291102406 # 1927
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
